--- a/style.css
+++ b/style.css
@@ -71,11 +71,12 @@ img {
 	height: auto;
 }
 
-.entry-content img,
+.entry-content
 .comment-content img,
 .widget img {
 	max-width: 100%; /* Fluid images for posts, comments, and widgets */
 }
+
 
 img[class*="align"],
 img[class*="wp-image-"],
@@ -653,18 +654,19 @@ select {
 .site-title h1 {
 	margin-top: 20px;
 	margin-top: 1.25rem;
+	margin-left: 13rem;
 }
 
 .site-title img {
 	vertical-align: text-bottom;
 }
-
-.site-title a {
-	color: #42A2CE !important;
-	font-size: 30px !important;
-	font-size: 3rem;
+.site-header a{
+	font-size:25px;
+	letter-spacing:3px;
 	text-decoration: none;
-}
+	color:#42A2CE;
+	}
+
 
 #bannercontainer {
 		width: 100%;
@@ -808,7 +810,9 @@ select {
 .entry-header .entry-title a {
 	text-decoration: none;
 }
-
+.entry-header h1{
+	 color:#42A2CE;
+	 }
 .entry-header h1 a:visited {
 	color: #333;
 }
@@ -816,6 +820,11 @@ select {
 .entry-header h1 a:hover {
 	color: #2997ab;
 }
+#post-61 .entry-header h1{
+	margin-top:6rem;
+	margin-left:20rem; 
+	margin-bottom:1rem;
+	}
 
 article.sticky .featured-post {
 	font-family: 'Arvo', Georgia, "Times New Roman", Times, serif;
@@ -1483,6 +1492,7 @@ form label.error {
 
 #footercontainer {
 	width: 100%;	
+	background-color: #42A2CE !important;
 }
 
 .site-footer {
@@ -1498,19 +1508,22 @@ form label.error {
 }
 
 .site-footer h3 { 
-	color: #ccc;
+	color: #fff;
+	font-size: 15px;
 }
 
 .site-footer a { 
-	color: #999;
+	color: #fff;
 }
-
+.site-footer p{
+color: #fff;
+}
 .site-footer a:visited { 
-	color: #999;
+	color: #fff;
 }
 
 .site-footer a:hover { 
-	color: #2997ab;
+	color: #fff;
 }
 
 .site-footer a:focus { 
@@ -1522,7 +1535,9 @@ form label.error {
 	margin-bottom: 16px;
 	margin-bottom: 1rem;
 }
-
+.smallfoot{
+	background-color:#239ACD;
+	}
 .smallprint {
 	color: #999;
 	width: 90%;
@@ -1532,10 +1547,13 @@ form label.error {
 .smallprint p {
 	font-size: 14px;
 	font-size: 0.875rem;
+	margin-top:10px;
+	color:#fff;
 }
 
 .smallprint a { 
-	color: #555;
+	color: #fff !important;
+	text-decoration:none;
 }
 
 .smallprint a:visited { 
@@ -1543,7 +1561,7 @@ form label.error {
 }
 
 .smallprint a:hover { 
-	color: #2997ab;
+	color: #fff;
 }
 
 
@@ -1754,7 +1772,7 @@ li span.dots {
 	float: right;
 	clear: right;
 	
-	margin: 2.8125rem 54rem 2rem 0;
+	margin: 1.8125rem 47.5rem 2rem 0;
 }
 
 .main-navigation h1 {
@@ -1813,11 +1831,21 @@ li span.dots {
 
 .main-navigation ul a {
 	padding: 0; /* Padding around each top level menu option (if needed) */
+	color:#fff;
+	font-weight:normal;
+	font-size:16px;
 }
-
+.main-navigation ul a:hover {
+	
+	color:#333;
+	
+}
 .main-navigation ul ul a {
 	padding: 0 5px; /* Padding around each dropdown menu option */
 	padding: 0 0.3125rem;
+	background-color:#42A2CE;
+	color:#fff;
+	border-bottom: 1px solid #ededed;
 }
 
 .main-small-navigation a, .main-navigation a {
@@ -1908,8 +1936,10 @@ li span.dots {
 /*  Breakpoints are set based on the design, not based on device sizes */
 @media only screen and (max-width: 1100px) {
 	.site-title a {
-		font-size: 52px;
-		font-size: 3.25rem;
+	letter-spacing:5px;
+	color: #42A2CE !important;
+	font-size: 25px !important;
+	text-decoration: none;
 	}
 	.banner h1 {
 		font-size: 44px;
@@ -2106,10 +2136,10 @@ li span.dots {
 .button{	
 			background: #fff;
 			border: solid 3px #333;
-			font-size: 16px;
-			font-size: 1.6rem;
+			font-size: 20px;
+			
 			display: inline-block;
-			padding: 16px;
+			padding: 10px;
 			
 			margin-top: 16px;
 			margin-top: 1.6rem;
@@ -2118,7 +2148,7 @@ li span.dots {
 			text-transform: uppercase;
 			font-weight: 700;
 			letter-spacing: 1px;
-			margin-left: 4rem;
+			margin-left: 7rem;
 	}
 .first-icons .text-widgets p{
 	font-size:40px;
@@ -2187,6 +2217,60 @@ li span.dots {
 					margin:0 auto;
 					display:block;
 					}
-.name{
+p.name{
 		text-align:center;
+		font-size:17px;
+					}
+.featured-first a{
+					color:black;
+					
+					}
+.featured-first a:hover{
+						color:#fff;
+						background-color:#42A2CE;
+						}
+#post-63{
+	background-color:#fff;
+	}
+.site-content .grid_12_of_12	{
+	background-color:#fff;
+		}
+#envira-gallery-wrap-115{
+			max-width:1140px;
+			}
+#envira-gallery-image-116{
+			width:95%;
+			}
+#envira-gallery-image-117{
+			width:95%;
+			}
+#envira-gallery-image-118{
+			width:95%;
+			}
+#envira-gallery-image-119{
+			width:95%;
+			}
+#envira-gallery-image-120{
+			width:95%;
+			}
+#envira-gallery-image-121{
+			width:95%;
+			}
+#envira-gallery-image-122{
+			width:95%;
+			}
+#envira-gallery-image-123{
+			width:95%;
+			}
+#envira-gallery-image-124{
+			width:95%;
+			}			
+.gform_wrapper .gform_footer{
+				padding: 0 !important;
+				margin:0 0 0 -7rem !important;
+				clear:both !important;
+				}
+.gform_wrapper .gform_footer input.button, .gform_wrapper .gform_footer input[type=submit]{
+					font-weight:normal !important;
+					font-size:13px !important;
 					}
